<resources>
    <string name="app_name">Reads (Blue)</string>
    <string name="email_hint">Email*</string>
    <string name="name_hint">Name</string>
    <string name="customer_id_hint">Customer ID</string>
    <string name="let_me_in">LET ME IN</string>
    <string name="book_cover">book cover</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_wish_list">Add to Wish list</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="quantity">Quantity</string>
    <string name="summary">Summary</string>
    <string name="default_quantity">1</string>

    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_purchase_confirmation">Purchase Complete</string>
    <string name="title_activity_purchase_return">Purchase Cancel / Return</string>
    <string name="title_activity_mailing_list">Mailing List</string>
    <string name="title_activity_subscription_events">Subscription Events</string>
    <string name="title_activity_offer_display">Offer Display</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_company">Company (optional)</string>
    <string name="hint_contact">Contact</string>
    <string name="complete_your_details">Complete your details</string>
    <string name="place_order">Place Order</string>
    <string name="total_excl_tax">Total (Excl. Tax)</string>
    <string name="tax">Tax</string>
    <string name="_0_dollar">$ 0.00</string>
    <string name="total">Total</string>
    <string name="order_summary">Order Summary</string>
    <string name="cart_0">Cart (%1$d)</string>
    <string name="dollar_x">$ %1$s</string>
    <string name="review_products">Review products</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="fetching_details">Fetching Details…</string>
    <string name="adding_to_cart">Adding to Cart…</string>
    <string name="slot">Slot (or pick from dropdown)</string>
    <string name="rd_email">Email</string>
    <string name="rd_device_id">Device Id</string>
    <string name="rd_customer_id">Customer Id</string>
    <string name="get_live_content">GET LIVE CONTENT</string>
    <string name="live_content_demo">Live Content Demo</string>
    <string name="close_button">Close button</string>
    <string name="x">X</string>
    <string name="server_response">Server Response:</string>
    <string name="debug">Debug</string>
    <string name="sdk_version">SDK v%1$s</string>
    <string name="btn_fire_event">Fire Event</string>
    <string name="msg_display_in_app_here">Display in-app here</string>
    <string name="msg_fetch_in_app">Fetch In App</string>
    <string name="msg_show_in_app">Show In App</string>
    <string name="fire_100_events">Fire 100 Events</string>
    <string name="logout">Logout</string>
    <string name="enable_push">Enable Push</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="enable_inapp">Enable InApp</string>
    <string name="inbox_0">Inbox (%1$d)</string>
    <string name="custom_inbox">Custom inbox</string>
    <string name="skip_sign_in">Skip Sign In</string>

    <string-array name="subscription_types_entries">
        <item>Subscription-0001</item>
        <item>Subscription-0002</item>
        <item>Subscription-0003</item>
    </string-array>

    <string-array name="live_content_slots">
        <item>Editors_Picks_Json</item>
        <item>inappmessagingslot</item>
    </string-array>

    <string-array name="debug_event_list">
        <item>bsft_send_me_in_app</item>
        <item>bsft_send_me_in_app_modal</item>
        <item>bsft_send_me_in_app_html</item>
        <item>bsft_send_me_push</item>
        <item>bsft_send_me_image_push</item>
        <item>bsft_send_me_animated_carousel_push</item>
        <item>bsft_send_me_nonanimated_carousel_push</item>
        <item>bsft_send_me_custom_button_push</item>
        <item>bsft_send_me_ul_email</item>
    </string-array>

</resources>
