<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.blueshift.reads.activity.ProductDetailsActivity">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/book_cover"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/book_qty"
        android:layout_width="100dp"
        android:layout_alignBottom="@id/book_cover"
        android:layout_toEndOf="@id/book_cover"
        android:layout_toRightOf="@id/book_cover"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="number"
        android:text="@string/default_quantity" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        style="?android:attr/buttonBarStyle"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onAddToCartClick"
            android:text="@string/add_to_cart" />

        <Button
            android:layout_width="0dp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onAddToWishListClick"
            android:text="@string/add_to_wish_list" />

    </LinearLayout>


    <ScrollView
        android:id="@+id/book_description_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons_layout"
        android:layout_below="@id/summary_text">

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum" />

    </ScrollView>

    <TextView
        android:id="@+id/book_name"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/book_cover"
        android:layout_toRightOf="@id/book_cover" />

    <TextView
        android:id="@+id/book_price"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_name"
        android:layout_toEndOf="@id/book_cover"
        android:layout_toRightOf="@id/book_cover" />

    <TextView
        android:id="@+id/summary_text"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/book_cover"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/summary" />

    <TextView
        android:id="@+id/book_sku"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_price"
        android:layout_toEndOf="@id/book_cover"
        android:layout_toRightOf="@id/book_cover" />

</RelativeLayout>
