<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/complete_your_details"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/order_name"
            style="@style/cart_input_container">

            <android.support.design.widget.TextInputEditText
                style="@style/cart_input_edit_text"
                android:hint="@string/hint_name"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/order_email"
            style="@style/cart_input_container">

            <android.support.design.widget.TextInputEditText
                style="@style/cart_input_edit_text"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/order_company"
            style="@style/cart_input_container">

            <android.support.design.widget.TextInputEditText
                style="@style/cart_input_edit_text"
                android:hint="@string/hint_company"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/order_contact"
            style="@style/cart_input_container">

            <android.support.design.widget.TextInputEditText
                style="@style/cart_input_edit_text"
                android:hint="@string/hint_contact"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>