<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DebugActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/debugEventSpinner"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#FFFFFF"
            android:entries="@array/debug_event_list" />


        <Button
            android:id="@+id/fireEventButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickFireEvents"
            android:text="@string/btn_fire_event" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/inAppSwitch"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/msg_display_in_app_here" />

        <Button
            android:id="@+id/inAppFetchButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:onClick="onClickFetchInApp"
            android:text="@string/msg_fetch_in_app" />

        <Button
            android:id="@+id/inAppShowButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="onClickShowInApp"
            android:text="@string/msg_show_in_app" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="logoutClick"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:onClick="fireHundredEvents"
        android:text="@string/fire_100_events"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/trackSwitch"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/trackSwitch"
        app:layout_constraintTop_toBottomOf="@+id/trackSwitch"
        app:layout_constraintVertical_bias="0.932" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pushSwitch"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/enable_push"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.024" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/trackSwitch"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/enable_tracking"
        app:layout_constraintEnd_toEndOf="@+id/inAppOptInSwitch"
        app:layout_constraintStart_toStartOf="@+id/inAppOptInSwitch"
        app:layout_constraintTop_toBottomOf="@+id/inAppOptInSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/inAppOptInSwitch"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:text="@string/enable_inapp"
        app:layout_constraintEnd_toEndOf="@+id/pushSwitch"
        app:layout_constraintStart_toStartOf="@+id/pushSwitch"
        app:layout_constraintTop_toBottomOf="@+id/pushSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>